# job-platform

./: README.md  instructions.md  requirements.txt  schema.md
.cursor/rules/: django-python-cursor-rules.mdc
.github/workflows/: django-ci.yml
api/: api.py  auth.py  companies.py  jobs.py  models.py  schemas.py  users.py
api/migrations/: 0001_initial.py
backend/: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  docker-compose.yml  env.local  pyproject.toml  pytest.ini  requirements.txt  settings.py  urls.py
backend/api/: api.py  apps.py  error_handlers.py
backend/api/migrations/: 0001_initial.py  0002_alter_jobposting_apply_url.py  0003_alter_company_logo_url_alter_company_website.py  0003_alter_jobposting_options_and_more.py  0004_jobposting_company_name_cached.py  0005_merge_20250519_0015.py
backend/api/models/: __init__.py  company.py  job.py  user.py
backend/api/routers/: auth.py  companies.py  jobs.py  users.py
backend/api/schemas/: common.py  companies.py  jobs.py  users.py
backend/api/signals/: __init__.py  companies_signals.py  jobs_signals.py
backend/api/tests/: conftest.py  test_api.py  test_companies.py  test_jobs.py  test_users.py
backend/backend/: settings.py  urls.py
frontend/: LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/php/: globalvar.php  modules.php
frontend/src/: App.vue  main.ts
frontend/src/APIs/: auth.ts  jobs.ts
frontend/src/config/: jobOptions.ts
frontend/src/i18n/: index.ts
frontend/src/layouts/: AppLayout.vue  AuthLayout.vue  (+1 more)
(+58 files in other folders)
